Huge amount of RAM used during start when rendering large images #37656

Closed
opened 2013-11-29 00:29:14 +01:00 by Carlo Andreacchio · 10 comments

System Information
Windows 7 x64, gtx 580, 8-12gb ram.

Blender Version
Broken: Blender 2.69 5edf6fc

Short description of error
When rendering large images (20000 x 10000) huge amounts of ram is initially used, then drops down significantly (dropped from 8gb to 4gb for me)... The spike makes it hard to render really large images as going anything larger will result in peak memory usage and what not.

It is also present in border rendering.

Exact steps for others to reproduce the error
Open attached blend file
render
watch ram usage spike dramatically, then drop down significantly

**System Information** Windows 7 x64, gtx 580, 8-12gb ram. **Blender Version** Broken: Blender 2.69 5edf6fc **Short description of error** When rendering large images (20000 x 10000) huge amounts of ram is initially used, then drops down significantly (dropped from 8gb to 4gb for me)... The spike makes it hard to render really large images as going anything larger will result in peak memory usage and what not. It is also present in border rendering. **Exact steps for others to reproduce the error** Open attached blend file render watch ram usage spike dramatically, then drop down significantly

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscriber: @brecht

Added subscriber: @brecht
[test.blend](https://archive.blender.org/developer/F33997/test.blend)

The Save Buffers option exists to avoid heavy memory usage during render, so this might work around the problem for you.

There is indeed some suspicious memory usage going on in color management at the start of rendering, will need to look into it closer to understand what is going on.

The Save Buffers option exists to avoid heavy memory usage during render, so this might work around the problem for you. There is indeed some suspicious memory usage going on in color management at the start of rendering, will need to look into it closer to understand what is going on.
Sergey Sharybin self-assigned this 2013-12-02 09:54:24 +01:00

Color management might be indeed not so much memory friendly. But it's suspicious why it gives a spike and not constant huge memory usage.

My area so will look into it.

Color management might be indeed not so much memory friendly. But it's suspicious why it gives a spike and not constant huge memory usage. My area so will look into it.

This issue was referenced by blender/blender-addons-contrib@9df2499531

This issue was referenced by blender/blender-addons-contrib@9df2499531f95f8f50e2ac508eb85c76fd1fa446

This issue was referenced by 9df2499531

This issue was referenced by 9df2499531f95f8f50e2ac508eb85c76fd1fa446

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9df2499531.

Closed by commit 9df2499531.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37656
No description provided.